# ChangeLog for dev-embedded/libftdi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/libftdi/ChangeLog,v 1.49 2009/12/29 07:46:49 vapier Exp $

  29 Dec 2009; Mike Frysinger <vapier@gentoo.org> libftdi-0.17.ebuild:
  Fix typo in builddir name #298607 by uzytkownik.

*libftdi-0.17 (20 Dec 2009)

  20 Dec 2009; Mike Frysinger <vapier@gentoo.org> +libftdi-0.17.ebuild:
  Version bump.

  20 Dec 2009; Mike Frysinger <vapier@gentoo.org> libftdi-0.16.ebuild:
  Mark sparc stable #288994.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> libftdi-0.16.ebuild:
  Marking libftdi-0.16 ppc64 for bug 288994

  29 Oct 2009; Markus Meier <maekke@gentoo.org> libftdi-0.16.ebuild:
  amd64/x86 stable, bug #288994

  24 Oct 2009; nixnut <nixnut@gentoo.org> libftdi-0.16.ebuild:
  ppc stable #288994

  14 Oct 2009; Mike Frysinger <vapier@gentoo.org> libftdi-0.16.ebuild:
  Switch to virtual/libusb:0 #270039 #281176.

*libftdi-0.16 (12 May 2009)

  12 May 2009; Mike Frysinger <vapier@gentoo.org> +libftdi-0.16.ebuild:
  Version bump.

  22 Apr 2009; Markus Meier <maekke@gentoo.org> libftdi-0.15:
  amd64 stable, bug #264854

  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> libftdi-0.15.ebuild:
  sparc/x86 stable wrt #264854

  04 Apr 2009; Brent Baude <ranger@gentoo.org> libftdi-0.15.ebuild:
  stable ppc, bug 264854

  04 Apr 2009; Brent Baude <ranger@gentoo.org> libftdi-0.15.ebuild:
  stable ppc64, bug 264854

  18 Mar 2009; Brent Baude <ranger@gentoo.org> libftdi-0.14.ebuild:
  stable ppc, bug 255061

  18 Feb 2009; Raúl Porcel <armin76@gentoo.org> libftdi-0.14.ebuild:
  sparc stable wrt #255061

  28 Jan 2009; Brent Baude <ranger@gentoo.org> libftdi-0.14.ebuild:
  stable ppc64, bug 255061

  18 Jan 2009; Markus Meier <maekke@gentoo.org> libftdi-0.14.ebuild:
  amd64/x86 stable, bug #255061

*libftdi-0.15 (15 Jan 2009)

  15 Jan 2009; Mike Frysinger <vapier@gentoo.org> +libftdi-0.15.ebuild:
  Version bump.
