@@ -1,6 +1,9 @@
 # ChangeLog for dev-embedded/libftdi
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/libftdi/ChangeLog,v 1.49 2009/12/29 07:46:49 vapier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/libftdi/ChangeLog,v 1.50 2010/06/22 20:27:28 vapier Exp $
+
+  22 Jun 2010; Mike Frysinger <vapier@gentoo.org> libftdi-0.17.ebuild:
+  Stabilize for all.
 
   29 Dec 2009; Mike Frysinger <vapier@gentoo.org> libftdi-0.17.ebuild:
   Fix typo in builddir name #298607 by uzytkownik.
